--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>CSS Values</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 
